--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-bower": "0.0.10",
+    "gulp-cache": "^0.2.10",
     "gulp-coffee": "^2.3.1",
     "gulp-connect": "^2.2.0",
+    "gulp-imagemin": "^2.3.0",
     "gulp-jade": "^1.0.1",
     "gulp-sass": "^2.0.3",
     "gulp-sourcemaps": "^1.5.2",
