--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-sass": "^2.0.3",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
-    "gulp-util": "^3.0.6"
+    "gulp-util": "^3.0.6",
+    "imagemin-pngquant": "^4.1.2"
   }
 }
