--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "tests"
   ],
   "dependencies": {
-    "normalize.css": "~3.0.3"
+    "normalize.css": "~3.0.3",
+    "bootstrap-sass": "~3.3.5"
   }
 }
